--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,7 +17,7 @@
     {{>_header}}
     
     <div class="d-flex">
-        <!-- Chamo o Menu -->
+        <!-- Chamo o Menu Principal-->
         {{>_menu}}
         <!-- Chamo o corpo main.handlebars -->
         {{{body}}}
