--- a/views/partials/_menu.handlebars
+++ b/views/partials/_menu.handlebars
@@ -1,6 +1,20 @@
 <nav class="sidebar">
     <ul class="list-unstyled">
         <li><a href="#"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
+
+        <li>
+            <a href="#submenu11" data-toggle="collapse">
+                <i class="fas fa-money-check-alt"></i> Pagamento
+            </a>
+            <ul id="submenu11" class="list-unstyled collapse">
+                <li><a href="listar.html"><i class="fas fa-money-bill-alt"></i> Pagamentos</a></li>
+                <li><a href="/admin/cat-pagamentos"><i class="fas fa-funnel-dollar"></i> Categorias</a></li>
+            </ul>
+        </li>
+
+
+
+
         <li>
             <a href="#submenu1" data-toggle="collapse">
                 <i class="fas fa-user"></i> Usuário
