--- a/views/admin/cad-cat-pagamento.handlebars
+++ b/views/admin/cad-cat-pagamento.handlebars
@@ -1,107 +1,27 @@
-<nav class="sidebar">
-    <ul class="list-unstyled">
-        <li><a href="#"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
-        <li>
-            <a href="#submenu1" data-toggle="collapse">
-                <i class="fas fa-user"></i> Usuário
-            </a>
-            <ul id="submenu1" class="list-unstyled collapse">
-                <li><a href="listar.html"><i class="fas fa-users"></i> Usuários</a></li>
-                <li><a href="#"><i class="fas fa-key"></i> Nível de Acesso</a></li>
-            </ul>
-        </li>
-        <li>
-            <a href="#submenu2" data-toggle="collapse"><i class="fas fa-list-ul"></i> Menu</a>
-            <ul id="submenu2" class="list-unstyled collapse">
-                <li><a href="#"><i class="fas fa-file-alt"></i> Páginas</a></li>
-                <li><a href="#"><i class="fab fa-elementor"></i> Item de Menu</a></li>
-            </ul>
-
-        </li>
-        <li><a href="#"> Item 1</a></li>
-        <li><a href="#"> Item 2</a></li>
-        <li><a href="#"> Item 3</a></li>
-        <li class="active"><a href="#"> Item 4</a></li>
-        <li><a href="#"><i class="fas fa-sign-out-alt"></i> Sair</a></li>
-    </ul>
-</nav>
-
 <div class="content p-1">
     <div class="list-group-item">
         <div class="d-flex">
             <div class="mr-auto p-2">
-                <h2 class="display-4 titulo">Cadastrar Usuário</h2>
+                <h2 class="display-4 titulo">Cadastrar Pagamento</h2>
             </div>
-            <a href="listar.html">
+            
                 <div class="p-2">
+                    <a href="/admin/cad-pagamentos">
                     <button class="btn btn-outline-info btn-sm">
                         Listar
                     </button>
+                    </a>
                 </div>
-            </a>
+            
         </div>
         <hr>
         <form>
             <div class="form-row">
-                <div class="form-group col-md-6">
+                <div class="form-group col-md-12">
                     <label><span class="text-danger">*</span> Nome</label>
                     <input name="nome" type="text" class="form-control" id="nome" placeholder="Nome completo">
                 </div>
-                <div class="form-group col-md-6">
-                    <label><span class="text-danger">*</span> E-mail</label>
-                    <input name="email" type="email" class="form-control" id="email" placeholder="Seu melhor e-mail">
-                </div>
-            </div>
-            <div class="form-row">
-                <div class="form-group col-md-6">
-                    <label>Senha</label>
-                    <input name="senha" type="password" class="form-control" id="senha"
-                        placeholder="Senha com mínimo 6 caracteres">
-                </div>
-                <div class="form-group col-md-6">
-                    <label>Confirma Senha</label>
-                    <input name="conf_senha" type="password" class="form-control" id="conf_senha"
-                        placeholder="Confirma a senha">
-                </div>
-            </div>
-            <div class="form-row">
-                <div class="form-group col-md-6">
-                    <label>Endereço</label>
-                    <input name="endereco" type="text" class="form-control" id="endereco" placeholder="Rua João...">
-                </div>
-                <div class="form-group col-md-2">
-                    <label>Número</label>
-                    <input name="numero" type="text" class="form-control" id="numero" placeholder="123">
-                </div>
-                <div class="form-group col-md-4">
-                    <label>Complemento</label>
-                    <input name="complemento" type="text" class="form-control" id="complemento"
-                        placeholder="Sala, Apartamento...">
-                </div>
-            </div>
-            <div class="form-row">
-                <div class="form-group col-md-5">
-                    <label>Estado</label>
-                    <select name="estado" id="estado" class="form-control">
-                        <option selected>Selecione</option>
-                        <option>...</option>
-                    </select>
-                </div>
-                <div class="form-group col-md-5">
-                    <label>Cidade</label>
-                    <select name="cidade" id="cidade" class="form-control">
-                        <option selected>Selecione</option>
-                        <option>...</option>
-                    </select>
-                </div>
-                <div class="form-group col-md-2">
-                    <label>CEP</label>
-                    <input name="cep" type="text" class="form-control" id="cep" placeholder="12345-678">
-                </div>
-            </div>
-            <div class="form-group">
-                <label>Exemplo 1</label>
-                <input name="exemplo_1" type="text" class="form-control" id="exemplo_1" placeholder="Exemplo 1">
+                
             </div>
             <p>
                 <span class="text-danger">* </span>Campo obrigatório
