--- a/views/admin/cad-cat-pagamento.handlebars
+++ b/views/admin/cad-cat-pagamento.handlebars
@@ -15,7 +15,7 @@
             
         </div>
         <hr>
-        <form>
+        <form action="/admin/add-cat-pagamento"  method="POST">
             <div class="form-row">
                 <div class="form-group col-md-12">
                     <label><span class="text-danger">*</span> Nome</label>
