--- a/views/admin/cad-cat-pagamento.handlebars
+++ b/views/admin/cad-cat-pagamento.handlebars
@@ -6,7 +6,7 @@
             </div>
             
                 <div class="p-2">
-                    <a href="/admin/cad-pagamentos">
+                    <a href="/admin/cad-pagamento">
                     <button class="btn btn-outline-info btn-sm">
                         Listar
                     </button>
