--- a/views/admin/cad-cat-pagamento.handlebars
+++ b/views/admin/cad-cat-pagamento.handlebars
@@ -4,24 +4,28 @@
             <div class="mr-auto p-2">
                 <h2 class="display-4 titulo">Cadastrar Pagamento</h2>
             </div>
-            
-                <div class="p-2">
-                    <a href="/admin/cad-pagamento">
+
+            <div class="p-2">
+                <a href="./cad-pagamentos">
                     <button class="btn btn-outline-info btn-sm">
                         Listar
                     </button>
-                    </a>
-                </div>
-            
+                </a>
+            </div>
+
         </div>
+
+        {{>_msg}}
+
+
         <hr>
-        <form action="/admin/add-cat-pagamento"  method="POST">
+        <form action="/admin/add-cat-pagamento" method="POST">
             <div class="form-row">
                 <div class="form-group col-md-12">
                     <label><span class="text-danger">*</span> Nome</label>
                     <input name="nome" type="text" class="form-control" id="nome" placeholder="Nome completo">
                 </div>
-                
+
             </div>
             <p>
                 <span class="text-danger">* </span>Campo obrigatório
