--- a/views/admin/cad-cat-pagamento.handlebars
+++ b/views/admin/cad-cat-pagamento.handlebars
@@ -6,7 +6,7 @@
             </div>
 
             <div class="p-2">
-                <a href="./cad-pagamentos">
+                <a href="/admin/cad-pagamentos">
                     <button class="btn btn-outline-info btn-sm">
                         Listar
                     </button>
@@ -16,7 +16,6 @@
         </div>
 
         {{>_msg}}
-
 
         <hr>
         <form action="/admin/add-cat-pagamento" method="POST">
