--- a/views/admin/pagamentos.handlebars
+++ b/views/admin/pagamentos.handlebars
@@ -3,11 +3,11 @@
 
         <div class="d-flex">
             <div class="mr-auto p-2">
-                <h2 class="display-4 titulo">Categorias de Pagamentos</h2>
+                <h2 class="display-4 titulo">Pagamentos</h2>
             </div>
 
             <div class="p-2">
-                <a href="/admin/cad-cat-pagamento">
+                <a href="/admin/cad-pagamento">
                     <button class="btn btn-outline-success btn-sm">
                         Cadastrar
                     </button>
@@ -22,19 +22,28 @@
                 <thead>
                     <tr>
                         <th>Nome</th>
+                        <th>Valor</th>
+                        <th>Categoria</th>
                         <th class="text-center">Ações</th>
                     </tr>
                 </thead>
                 <tbody>
 
-                    {{#each catpagamentos}}
+                    {{#each pagamentos}}
+                    
                     <tr>
                         <td> {{nome}} </td>
+                        <td> {{valor}} </td>
+                        <td> <a href="/admin/vis-cat-pagamento/{{catpagamento._id}}">
+                                {{catpagamento.nome}} 
+                            </a> 
+                        </td>
+
                         <td class="text-center">
                             <span class="d-none d-md-block">
-                                <a href="/admin/vis-cat-pagamento/{{_id}}" class="btn btn-outline-primary btn-sm">Visualizar</a>
-                                <a href="/admin/edit-cat-pagamento/{{_id}}" class="btn btn-outline-warning btn-sm">Editar</a>
-                                <a href="/admin/del-cat-pagamento/{{_id}}" class="btn btn-outline-danger btn-sm" >Apagar</a>
+                                <a href="/admin/vis-pagamento/{{_id}}" class="btn btn-outline-primary btn-sm">Visualizar</a>
+                                <a href="/admin/edit-pagamento/{{_id}}" class="btn btn-outline-warning btn-sm">Editar</a>
+                                <a href="/admin/del-pagamento/{{_id}}" class="btn btn-outline-danger btn-sm" >Apagar</a>
                             </span>
                             <div class="dropdown d-block d-md-none">
                                 <button class="btn btn-primary dropdown-toggle btn-sm" type="button" id="acoesListar"
@@ -42,9 +51,9 @@
                                     Ações
                                 </button>
                                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="acoesListar">
-                                    <a class="dropdown-item" href="/admin/vis-cat-pagamento/{{_id}}">Visualizar</a>
-                                    <a class="dropdown-item" href="/admin/edit-cat-pagamento/{{_id}}">Editar</a>
-                                    <a class="dropdown-item" href="/admin/del-cat-pagmento/{{_id}}" >Apagar</a>
+                                    <a class="dropdown-item" href="/admin/vis-pagamento/{{_id}}">Visualizar</a>
+                                    <a class="dropdown-item" href="/admin/edit-pagamento/{{_id}}">Editar</a>
+                                    <a class="dropdown-item" href="/admin/del-pagmento/{{_id}}" >Apagar</a>
                                 </div>
                             </div>
                         </td>
@@ -53,7 +62,7 @@
                 </tbody>
             </table>
         </div>
-
+  
 
     </div>
 </div>
