--- a/views/partials/_menu.handlebars
+++ b/views/partials/_menu.handlebars
@@ -12,15 +12,12 @@
             </ul>
         </li>
 
-
-
-
         <li>
             <a href="#submenu1" data-toggle="collapse">
                 <i class="fas fa-user"></i> Usuário
             </a>
             <ul id="submenu1" class="list-unstyled collapse">
-                <li><a href="listar.html"><i class="fas fa-users"></i> Usuários</a></li>
+                <li><a href="/admin/usuarios"><i class="fas fa-users"></i> Usuários</a></li>
                 <li><a href="#"><i class="fas fa-key"></i> Dados Pessoais</a></li>
             </ul>
         </li>
@@ -30,12 +27,8 @@
                 <li><a href="#"><i class="fas fa-file-alt"></i> Páginas</a></li>
                 <li><a href="#"><i class="fab fa-elementor"></i> Item de Menu</a></li>
             </ul>
-
         </li>
-        <li><a href="#">Comprovante</a></li>
-        <li><a href="#">Solicitação de Saque</a></li>
-        <li><a href="#">Movimentação</a></li>
-        <li class="active"><a href="#">Estatísticas</a></li>
+        
         <li><a href="#"><i class="fas fa-sign-out-alt"></i> Sair</a></li>
     </ul>
 </nav>
