Criacao de novas Rotas

--- a/views/admin/cad-cat-pagamento.handlebars
+++ b/views/admin/cad-cat-pagamento.handlebars
@@ -18,7 +18,7 @@
         {{>_msg}}
 
         <hr>
-        <form action="/admin/add-cat-pagamento" method="POST">
+        <form action="/crud/add-cat-pagamento" method="POST">
             <div class="form-row">
                 <div class="form-group col-md-12">
                     <label><span class="text-danger">*</span> Nome</label>
