--- a/views/admin/cad-pagamento.handlebars
+++ b/views/admin/cad-pagamento.handlebars
@@ -14,7 +14,7 @@
         </div>
         <hr>
         {{>_msg}}
-        <form action="/admin/add-pagamento" method="POST">
+        <form action="/crud/add-pagamento" method="POST">
             <div class="form-row">
                 <div class="form-group col-md-12">
                     <label><span class="text-danger">*</span> Nome</label>
