--- a/views/admin/edit-pagamento.handlebars
+++ b/views/admin/edit-pagamento.handlebars
@@ -7,9 +7,9 @@
             <div class="p-2">
                 <span class="d-none d-md-block">
                     <a href="/admin/pagamentos" class="btn btn-outline-info btn-sm">Listar</a>
-                    <a href="/admin/vis-pagamento/{{pagamento._id}}"
+                    <a href="/crud/vis-pagamento/{{pagamento._id}}"
                         class="btn btn-outline-primary btn-sm">Visualizar</a>
-                    <a href="/admin/del-pagamento/{{pagamento._id}}"
+                    <a href="/crud/del-pagamento/{{pagamento._id}}"
                         class="btn btn-outline-danger btn-sm">Apagar</a>
                 </span>
                 <div class="dropdown d-block d-md-none">
@@ -19,8 +19,8 @@
                     </button>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="acoesListar">
                         <a class="dropdown-item" href="/admin/pagamentos">Listar</a>
-                        <a class="dropdown-item" href="/admin/vis-pagamento/{{pagamento._id}}">Visualizar</a>
-                        <a class="dropdown-item" href="/admin/del-pagamento/{{pagamento._id}}">Apagar</a>
+                        <a class="dropdown-item" href="/crud/vis-pagamento/{{pagamento._id}}">Visualizar</a>
+                        <a class="dropdown-item" href="/crud/del-pagamento/{{pagamento._id}}">Apagar</a>
                     </div>
                 </div>
             </div>
@@ -28,7 +28,7 @@
         <hr>
         {{>_msg}}
         
-        <form action="/admin/update-pagamento" method="POST">
+        <form action="/crud/update-pagamento" method="POST">
             <input type="hidden" name="id" value="{{pagamento._id}}">
             <div class="form-row">
                 <div class="form-group col-md-12">
