--- a/views/admin/cad-usuario.handlebars
+++ b/views/admin/cad-usuario.handlebars
@@ -15,7 +15,7 @@
         <hr>
         {{>_msg}}
         
-        <form action="/admin/add-usuario" method="POST">
+        <form action="/crud/add-usuario" method="POST">
             <div class="form-row">
                 <div class="form-group col-md-12">
                     <label><span class="text-danger">*</span> Nome</label>
