--- a/views/admin/cat-pagamentos.handlebars
+++ b/views/admin/cat-pagamentos.handlebars
@@ -32,9 +32,9 @@
                         <td> {{nome}} </td>
                         <td class="text-center">
                             <span class="d-none d-md-block">
-                                <a href="/admin/vis-cat-pagamento/{{_id}}" class="btn btn-outline-primary btn-sm">Visualizar</a>
+                                <a href="/crud/vis-cat-pagamento/{{_id}}" class="btn btn-outline-primary btn-sm">Visualizar</a>
                                 <a href="/admin/edit-cat-pagamento/{{_id}}" class="btn btn-outline-warning btn-sm">Editar</a>
-                                <a href="/admin/del-cat-pagamento/{{_id}}" class="btn btn-outline-danger btn-sm" >Apagar</a>
+                                <a href="/crud/del-cat-pagamento/{{_id}}" class="btn btn-outline-danger btn-sm" >Apagar</a>
                             </span>
                             <div class="dropdown d-block d-md-none">
                                 <button class="btn btn-primary dropdown-toggle btn-sm" type="button" id="acoesListar"
@@ -42,9 +42,9 @@
                                     Ações
                                 </button>
                                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="acoesListar">
-                                    <a class="dropdown-item" href="/admin/vis-cat-pagamento/{{_id}}">Visualizar</a>
+                                    <a class="dropdown-item" href="/crud/vis-cat-pagamento/{{_id}}">Visualizar</a>
                                     <a class="dropdown-item" href="/admin/edit-cat-pagamento/{{_id}}">Editar</a>
-                                    <a class="dropdown-item" href="/admin/del-cat-pagmento/{{_id}}" >Apagar</a>
+                                    <a class="dropdown-item" href="/crud/del-cat-pagmento/{{_id}}" >Apagar</a>
                                 </div>
                             </div>
                         </td>
