--- a/views/admin/pagamentos.handlebars
+++ b/views/admin/pagamentos.handlebars
@@ -41,9 +41,9 @@
 
                         <td class="text-center">
                             <span class="d-none d-md-block">
-                                <a href="/admin/vis-pagamento/{{_id}}" class="btn btn-outline-primary btn-sm">Visualizar</a>
+                                <a href="/crud/vis-pagamento/{{_id}}" class="btn btn-outline-primary btn-sm">Visualizar</a>
                                 <a href="/admin/edit-pagamento/{{_id}}" class="btn btn-outline-warning btn-sm">Editar</a>
-                                <a href="/admin/del-pagamento/{{_id}}" class="btn btn-outline-danger btn-sm" >Apagar</a>
+                                <a href="/crud/del-pagamento/{{_id}}" class="btn btn-outline-danger btn-sm" >Apagar</a>
                             </span>
                             <div class="dropdown d-block d-md-none">
                                 <button class="btn btn-primary dropdown-toggle btn-sm" type="button" id="acoesListar"
@@ -51,9 +51,9 @@
                                     Ações
                                 </button>
                                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="acoesListar">
-                                    <a class="dropdown-item" href="/admin/vis-pagamento/{{_id}}">Visualizar</a>
+                                    <a class="dropdown-item" href="/crud/vis-pagamento/{{_id}}">Visualizar</a>
                                     <a class="dropdown-item" href="/admin/edit-pagamento/{{_id}}">Editar</a>
-                                    <a class="dropdown-item" href="/admin/del-pagmento/{{_id}}" >Apagar</a>
+                                    <a class="dropdown-item" href="/crud/del-pagmento/{{_id}}" >Apagar</a>
                                 </div>
                             </div>
                         </td>
@@ -63,6 +63,5 @@
             </table>
         </div>
   
-
     </div>
 </div>
