--- a/views/admin/usuarios.handlebars
+++ b/views/admin/usuarios.handlebars
@@ -39,10 +39,10 @@
 
                         <td class="text-center">
                             <span class="d-none d-md-block">
-                                <a href="/admin/vis-usuario/{{_id}}"
+                                <a href="/crud/vis-usuario/{{_id}}"
                                     class="btn btn-outline-primary btn-sm">Visualizar</a>
                                 <a href="/admin/edit-usuario/{{_id}}" class="btn btn-outline-warning btn-sm">Editar</a>
-                                <a href="/admin/del-usuario/{{_id}}" class="btn btn-outline-danger btn-sm">Apagar</a>
+                                <a href="/crud/del-usuario/{{_id}}" class="btn btn-outline-danger btn-sm">Apagar</a>
                             </span>
                             <div class="dropdown d-block d-md-none">
                                 <button class="btn btn-primary dropdown-toggle btn-sm" type="button" id="acoesListar"
@@ -50,9 +50,9 @@
                                     Ações
                                 </button>
                                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="acoesListar">
-                                    <a class="dropdown-item" href="/admin/vis-usuario/{{_id}}">Visualizar</a>
+                                    <a class="dropdown-item" href="/crud/vis-usuario/{{_id}}">Visualizar</a>
                                     <a class="dropdown-item" href="/admin/edit-usuario/{{_id}}">Editar</a>
-                                    <a class="dropdown-item" href="/admin/del-usuario/{{_id}}">Apagar</a>
+                                    <a class="dropdown-item" href="/crud/del-usuario/{{_id}}">Apagar</a>
                                 </div>
                             </div>
                         </td>
