--- a/views/admin/vis-pagamento.handlebars
+++ b/views/admin/vis-pagamento.handlebars
@@ -11,7 +11,7 @@
                     <a href="/admin/pagamentos" class="btn btn-outline-info btn-sm">Listar</a>
                     <a href="/admin/edit-pagamento/{{pagamento._id}}"
                         class="btn btn-outline-warning btn-sm">Editar</a>
-                    <a href="/admin/del-pagamento/{{pagamento._id}}"
+                    <a href="/crud/del-pagamento/{{pagamento._id}}"
                         class="btn btn-outline-danger btn-sm">Apagar</a>
                 </span>
                 <div class="dropdown d-block d-md-none">
@@ -22,7 +22,7 @@
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="acoesListar">
                         <a class="dropdown-item" href="/admin/pagamentos">Listar</a>
                         <a class="dropdown-item" href="/admin/edit-pagamento/{{pagamento._id}}">Editar</a>
-                        <a class="dropdown-item" href="/admin/del-pagamento/{{pagamento._id}}">Apagar</a>
+                        <a class="dropdown-item" href="/crud/del-pagamento/{{pagamento._id}}">Apagar</a>
                     </div>
                 </div>
             </div>
